cambios en el css

--- a/index.html
+++ b/index.html
@@ -18,34 +18,33 @@
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
-            <h3 class="menu__title">Fulana de Tal</h3>
+            <h3 class="menu__title">Carlos A. Cortes</h3>
         </header>
-        <nav>
+        <nav class="menu__nav">
             <ul class="menu__list">
-                <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
-                <li class="menu__list__item"><a href="#skills">Skills</a></li>
-                <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
-                <li class="menu__list__item"><a href="#formacion">Formación</a></li>
-                <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
+                <li class="menu__list__item"><a class="link__nav" href="#sobre-mi">Sobre mi</a></li>
+                <li class="menu__list__item"><a class="link__nav" href="#skills">Skills</a></li>
+                <li class="menu__list__item"><a class="link__nav" href="#hobbies">Hobbies</a></li>
+                <li class="menu__list__item"><a class="link__nav" href="#formacion">Formación</a></li>
+                <li class="menu__list__item"><a class="link__nav" href="#xp">Proyectos</a></li>
+                <li class="menu__list__item"><a class="link__nav contacto--head" href="#contacto">caauco0728@gmail.com</a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">contacto@fulana.com</a></li>
         </nav>
     </section>
 
     <!-- Sección del Header/Title/Hero -->
     <section class="title">
         <div class="title__div">
-            <img class="title__profile" src="assets\profile.png">
+            <img class="title__profile" src="assets\perfil.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fulana de Tal y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Carlos Cortes y construyo paginas web</h2>
+                <h3 class="title__subsection">En el momento estoy realizando mis estudios como ingeniero de software en la Universidad Politécnico Grancolombiano, así mismo afianzo mis conocimientos en lenguajes de programación y desarrollo en Alura Latam y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
-                    <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a class="link__network--item" href="">Github <img src="assets\arrow.png"> </a></li>
+                    <li class="title__network__item"><a class="link__network--item" href="">Linkedin <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a class="link__network--item" href="">Instagram <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a class="link__network--item" href="">Currículo <img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -55,8 +54,8 @@
     <section class="about" id="sobre-mi">
         <div class="about__container">
             <h3 class="about__title">Sobre mi</h3>
-            <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.  </p>
-            <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+            <p class="about__paragraph">Soy apasionado por la tecnología, estoy en constante aprendizaje para la mejora de técnicas, habilidades y procesos que me conlleven a ser mejor dentro de mis capacidades para el desarrollo de sitios web y aplicaciones mobiles.  </p>
+            <p class="about__paragraph">Responsable y muy disciplinado con las tareas asignadas, muy resiliente en ambientes de trabajo y aprendizaje, pregunto cuando no se sin temor a las burlas, reconozco las buenas ideas y aportes de los compañeros de trabajo. </p>
             <!-- Si quieres, pon tú firma acá! -->
             <img src="assets\signature.png">
         </div>
@@ -191,7 +190,7 @@
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profissional</h2>
+        <h2 class="experience__section__title" >Experiencia Profesional</h2>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\decod_print.png">
@@ -209,7 +208,7 @@
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\forca_print.png">
-            <div class="experience__info"
+            <div class="experience__info">
                 <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
@@ -271,8 +270,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
+                <p>Desarrollado por carlos Augusto Cortes</p>
+                <p>2023</p>
             </div>
         </section>
     </div>
