Actualización Vrs tablet 768px y escritorio 1024px

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
                 <div class="experiencie__box">
                     <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-                    <img class="experience__img"
+                    <img class="experience__img experience__img--order"
                         src="assets\forca_print.png">
                     <div class="experience__info info__forca">
                         <h2 class="experience__title">Juego creado con HTML y
@@ -302,7 +302,7 @@
 
                 <div class="experiencie__box">
                     <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-                    <img class="experience__img"
+                    <img class="experience__img experience__img--order"
                         src="assets/forca2_print.png">
                     <div class="experience__info">
                         <h2 class="experience__title">Juego creado con HTML, CSS
